@@ -53,7 +53,6 @@
 #define MAX_CLIENTS 64
 #define MAX_DEVICES 4
 #define NAVCOM_ENABLE 1
-#define NETFEED_ENABLE 1
 #define OCEANSERVER_ENABLE 1
 #define ONCORE_ENABLE 1
 #define OSCILLATOR_ENABLE 1
