@@ -5,6 +5,7 @@
   Remove ntrip option and NTRIP_ENABLE.  Always build.
   Remove passthrough option and PASSTHROUGH_ENABLE.  Always build.
   Remove nmea0183 option and NMEA0183_ENABLE.  Always build.
+  Remove netfeed option and NETFEED_ENABLE.  Always build.
 
 3.23.1: 2021-09-21
   Improve ubx cycle detection.
